# azure-c-pal

common/inc/azure_c_pal/: gballoc_socket.h
common/src/: gballoc_socket.c  net_comm_interface.c
interfaces/: CMakeLists.txt
interfaces/inc/azure_c_pal/: async_socket.h  gballoc_socket.h  gballoc_socket_redirect.h  socket_handle.h  socket_objects.h  tls_handle.h
interfaces/inc/c_pal/: socket_handle.h
linux/: CMakeLists.txt
linux/src/: socket_linux.c
win32/: CMakeLists.txt
win32/devdoc/: async_socket_win32.md
win32/src/: async_socket_win32.c  gballoc_ll_mimalloc.c  socket_handle_win32.c  socket_win32.c  tls_handle_win32.c
win32/tests/: CMakeLists.txt
win32/tests/async_socket_win32_ut/: async_socket_win32_ut.c
win32/tests/socket_handle_win32_int/: CMakeLists.txt  main.c  socket_handle_win32_int.c
win32/tests/socket_handle_win32_ut/: CMakeLists.txt  main.c  socket_handle_win32_ut.c
